Update button text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Ranking Grader</h1>
         
         <div id="file-upload">
-            <button id="upload-btn">Upload Nominal Roll</button>
+            <button id="upload-btn">Upload Data (.xlsx)</button>
             <input type="file" id="excel-upload" accept=".xlsx, .xls" style="display: none;">
         </div>
 
