--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAF Personnel Ranking System</title>
     <link rel="stylesheet" href="Style/styles.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="Script/jquery-3.6.0.min.js"></script>
+    <script src="Script/jquery-ui.min.js"></script>
 </head>
 <body>
     <div id="ranking-system">
         <h1>Ranking Grader</h1>
         
         <div id="file-upload">
-            <button id="upload-btn">Upload Data (.xlsx)</button>
+            <button id="upload-btn">Upload Data (.xlsx, .xls)</button>
             <input type="file" id="excel-upload" accept=".xlsx, .xls" style="display: none;">
         </div>
 
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+    <script src="Script/xlsx.full.min.js"></script>
     <script src="Script/script.js"></script>
 </body>
 </html>
