--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="file" id="excel-upload" accept=".xlsx, .xls" style="display: none;">
         </div>
 
-        <div id="rank-toggles">
+        <div id="rank-tabs">
             <!-- Rank toggle buttons will be dynamically added here -->
         </div>
 
