Added Save & Load (.xlsx)

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
             
             <button id="save-progress" class="action-button save-button">
-                <i class="fas fa-save"></i> Save Progress (.JSON)
+                <i class="fas fa-save"></i> Save Progress (.xlsx)
             </button>
             <button id="load-progress" class="action-button load-button">
-                <i class="fas fa-folder-open"></i> Load Progress (.JSON)
+                <i class="fas fa-folder-open"></i> Load Progress (.xlsx)
             </button>
             
             <h3 class="tool-header">
